fix z-index

--- a/css/perry.css
+++ b/css/perry.css
@@ -127,7 +127,7 @@ body{
 		top:0;
 		left:0;
 		width:100vw;
-		z-index:1;
+		z-index:0;
 		background:#FFFFFF;
 		opacity:0;
 	}
